--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 
 <section>
 <h2>このサイトについて</h2>
-<p>このサイトは「きずな少額短期保険」の代理店向けのサイトです。<br>
-見積や募集資材の発注等ができます。<br>
+<p>このサイトは「きずな少額短期保険」の社内向けのサイトです。<br>
 <br>
 推奨環境はPCのみとなります。スマートフォンやタブレットでのご利用は推奨していません。<br>
 また、JavaScript、Cookieが使用できる状態でご利用ください。<br>
@@ -46,7 +45,7 @@
 <section>
 <h2>News</h2>
 <dl id="new">
-<dt>2024/04/01<span class="icon-bg1">サービス</span></dt><dd>サイト公開</dd>
+<dt>2024/04/22<span class="icon-bg1">サービス</span></dt><dd>サイト公開</dd>
 </dl>
 </section>  
 
