--- a/navigation.html
+++ b/navigation.html
@@ -1,8 +1,17 @@
 <nav>
-    
+
 <div class="ac-box">
   <input id="ac-1" name="accordion-1" type="checkbox">
-  <label for="ac-1">■ きずなの死亡保険</label>
+  <label for="ac-1">■ 日常業務</label>
+  <div class="open">
+    <a href="#">受電記録</a>
+    <a href="#">発送記録</a>
+  </div>
+</div>
+    
+<div class="ac-box">
+  <input id="ac-2" name="accordion-1" type="checkbox">
+  <label for="ac-2">■ きずなの死亡保険</label>
   <div class="open">
     <a href="quotation.html">見積（生年月日入力）</a>
     <a href="quotation_age.html">見積（契約年齢入力）</a>
@@ -11,8 +20,8 @@
 </div>
 
 <div class="ac-box">
-  <input id="ac-2" name="accordion-2" type="checkbox">
-  <label for="ac-2">■ 帳票関係</label>
+  <input id="ac-3" name="accordion-2" type="checkbox">
+  <label for="ac-3">■ 帳票関係</label>
   <div class="open">
     <a href="format.html">帳票一覧</a>
     <a href="order.html">資材発注</a>
@@ -21,13 +30,13 @@
 
 <div class="ac-box">
   <input id="ac-3" name="accordion-3" type="checkbox">
-  <label for="ac-3">■ お問合せ</label>
+  <label for="ac-3">■ 連絡先</label>
   <div class="open">
-    <a href="contact.html">ご連絡先</a>
-    <a href="contactform.html">お問合せフォーム</a>
+    <a href="contact.html">連絡先一覧</a>
   </div>
 </div>
 
+<!--
 <div class="ac-box">
   <input id="ac-4" name="accordion-3" type="checkbox">
   <label for="ac-4">■ eラーニング</label>
@@ -36,7 +45,6 @@
   </div>
 </div>
 
-<!--
 <div class="ac-box">
   <input id="ac-5" name="accordion-3" type="checkbox">
   <label for="ac-5">■ web申込（工事中）</label>
@@ -54,10 +62,5 @@
     <a href="https://kizuna-ssi.jp/" target="_blank">コーポレートサイト</a>
   </div>
 </div>
-
-  
-  
-
-
 
 </nav>
