--- a/navigation.html
+++ b/navigation.html
@@ -57,9 +57,13 @@
     
 <div class="ac-box">
   <input id="ac-6" name="accordion-4" type="checkbox">
-  <label for="ac-6">■ コーポレートサイト</label>
+  <label for="ac-6">■ 外部リンク</label>
   <div class="open">
     <a href="https://kizuna-ssi.jp/" target="_blank">コーポレートサイト</a>
+    <a href="https://kizuna-ssi.net/" target="_blank">代理店向けサイト</a>
+    <a href="https://denshi-shinsei.fsa.go.jp/ja/sinsei-list/" target="_blank">金融庁 申請届出一覧</a>
+    <a href="https://bsis.fsa.go.jp/appcommon/menu/GMCM0000201.xhtml" target="_blank">金融庁業務支援統合システム</a>
+    <a href="https://ssi-d.jp/account/signin" target="_blank">少額短期保険ダッシュボード</a>   
   </div>
 </div>
 
