--- a/navigation.html
+++ b/navigation.html
@@ -4,8 +4,8 @@
   <input id="ac-1" name="accordion-1" type="checkbox">
   <label for="ac-1">■ 日常業務</label>
   <div class="open">
-    <a href="#">受電記録</a>
-    <a href="#">発送記録</a>
+    <a href="#">対応記録</a>
+    <a href="#">郵送記録</a>
   </div>
 </div>
     
