--- a/navigation.html
+++ b/navigation.html
@@ -24,6 +24,7 @@
   <label for="ac-3">■ 帳票関係</label>
   <div class="open">
     <a href="format.html">帳票一覧</a>
+    <a href="#">在庫管理</a>
   </div>
 </div>
 
