--- a/application_print.html
+++ b/application_print.html
@@ -41,7 +41,9 @@
     <p><span style="font-weight: bold;">【ご利用にあたってのご注意】</span><br>
       本ページでは「きずなの死亡保険」の機械印字された申込書を印刷することができます。<br>
       最初に募集人コード（半角数字6桁）を入力してください。<br>
-      正しい募集人コードが入力された場合のみ、入力フォームが表示されます。</p><br>
+      正しい募集人コードが入力された場合のみ、入力フォームが表示されます。<br>
+      <span style="font-size: 0.7em;">
+        ※本ページでの入力はあくまで印刷を目的としたものであるため、入力されたデータはお使いのブラウザ以外に保存されることはありません。</span></p><br>
 
     <table class="ta1">
       <caption>代理店・募集人<span style="font-size: 0.7em;">（窓口となる会社・担当）</span></caption>
