--- a/navigation.html
+++ b/navigation.html
@@ -4,7 +4,7 @@
   <input id="ac-1" name="accordion-1" type="checkbox">
   <label for="ac-1">■ 日常業務</label>
   <div class="open">
-    <a href="#">対応記録</a>
+    <a href="record1.html">対応記録</a>
     <a href="#">郵送記録</a>
   </div>
 </div>
