--- a/navigation.html
+++ b/navigation.html
@@ -5,7 +5,7 @@
   <label for="ac-1">■ 日常業務</label>
   <div class="open">
     <a href="record1.html">対応記録</a>
-    <a href="#">郵送記録</a>
+    <a href="record2.html">郵送記録</a>
   </div>
 </div>
     
