--- a/record1.html
+++ b/record1.html
@@ -7,7 +7,6 @@
 <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
 <meta name="description" content="">
 <link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/print.css">
 <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
@@ -39,7 +38,7 @@
 <form action="https://ssgform.com/s/e3erbG2Pqtai" method="post" id="order_form" class="form1">
 <span class="p-country-name" style="display:none;">Japan</span>
   
-<h2>お問合せフォーム</h2>
+<h2>対応記録</h2>
 
 <table class="ta1">
 <tr>
@@ -57,18 +56,6 @@
 <tr>
 <th>お問合せ内容</th>
 <td><textarea name="お問合せ内容" cols="30" rows="10" class="wl" required="required" autocomplete="off" style="height: 200px;"></textarea></td>
-</tr>
-<tr>
-<th></th>
-<td>
-<label class="CheckboxInput">
-  <input class="CheckboxInput-Input" type="checkbox" required="required">
-  <span class="CheckboxInput-DummyInput"></span>
-  <span class="CheckboxInput-LabelText">
-  <a href="pdf/privacy.pdf" target="_blank">プライバシーポリシー</a>を確認のうえ、同意する</span>
-</label>
-  
-</td>
 </tr>
 </table>
 
@@ -100,7 +87,6 @@
 <!--ページの上部へ戻るボタン-->
 <div class="pagetop"><a href="#"><i class="fas fa-angle-double-up"></i></a></div>
 
-<script src="js/recruitcode.js"></script>
 <script src="https://yubinbango.github.io/yubinbango/yubinbango.js" charset="UTF-8"></script>
   
 </body>
