--- a/record1.html
+++ b/record1.html
@@ -35,7 +35,8 @@
 <section>
 
 <div class="h-adr">
-<form action="https://ssgform.com/s/e3erbG2Pqtai" method="post" id="order_form" class="form1">
+<form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfW-YUbsQ-KmlhxRUh4fMPr0_6fkDhiewcZR_NlZI_zWVHe8w/formResponse"
+  method="post" id="order_form" class="form1">
 <span class="p-country-name" style="display:none;">Japan</span>
   
 <h2>対応記録</h2>
