--- a/record1.html
+++ b/record1.html
@@ -43,6 +43,34 @@
 
 <table class="ta1">
 <tr>
+<th>対応日時</th>
+<td>
+  <input type="date" name="entry.1084012273" size="30" class="ws" required="required" autocomplete="off">
+  <input type="time" name="entry.1729057004" size="30" class="ws" required="required" autocomplete="off">
+</td>
+</tr>
+<tr>
+<th>顧客区分とカテゴリ</th>
+<td>
+       <div class="select1">
+        <select name="entry.2005620554">
+         <option value="">　</option>
+         <option value="申込希望">申込希望</option>
+         <option value="既契約者">既契約者</option>
+         <option value="代理店">代理店</option>
+         <option value="その他">その他</option>
+        </select>
+       <div class="select1">
+        <select name="entry.1713702555">
+         <option value="">　</option>
+         <option value="相談">相談</option>
+         <option value="苦情">苦情</option>
+         <option value="その他">その他</option>
+        </select>         
+       </div>
+</td>
+</tr>
+<tr>
 <th>お名前</th>
 <td><input type="text" name="お名前" size="30" class="ws" required="required" autocomplete="on"></td>
 </tr>
