--- a/record1.html
+++ b/record1.html
@@ -45,30 +45,31 @@
 <tr>
 <th>対応日時</th>
 <td>
-  <input type="date" name="entry.1084012273" size="30" class="ws" required="required" autocomplete="off">
-  <input type="time" name="entry.1729057004" size="30" class="ws" required="required" autocomplete="off">
+  <input type="date" name="entry.1084012273" size="30" class="ws" required="required" autocomplete="off" style="display: inline-block;width: 200px;">
+  <input type="time" name="entry.1729057004" size="30" class="ws" required="required" autocomplete="off" style="display: inline-block;width: 200px;">
 </td>
 </tr>
 <tr>
-<th>顧客区分とカテゴリ</th>
+<th>区分</th>
 <td>
-       <div class="select1">
-        <select name="entry.2005620554">
+<div class="select1">
+<span style="width:100px; text-align: center;">顧客区分</span>
+    <select name="entry.2005620554">
          <option value="">　</option>
          <option value="申込希望">申込希望</option>
          <option value="既契約者">既契約者</option>
          <option value="代理店">代理店</option>
          <option value="その他">その他</option>
         </select>
-       <div class="select1">
+<span style="width:100px; text-align: center;">カテゴリ</span>
         <select name="entry.1713702555">
          <option value="">　</option>
          <option value="相談">相談</option>
          <option value="苦情">苦情</option>
          <option value="その他">その他</option>
         </select>         
-       </div>
-</td>
+
+</div></td>
 </tr>
 <tr>
 <th>お名前</th>
