--- a/record1.html
+++ b/record1.html
@@ -44,8 +44,8 @@
 <tr>
 <th>対応日時</th>
 <td>
-  <input type="date" name="entry.1084012273" size="30" class="ws" style="display: inline-block;width: 200px;">
-  <input type="time" name="entry.1729057004" size="30" class="ws" style="display: inline-block;width: 200px;">
+  <input type="date" name="entry.1084012273" size="30" class="ws" style="display: inline-block;width: 150px;">
+  <input type="time" name="entry.1729057004" size="30" class="ws" style="display: inline-block;width: 150px;">
 </td>
 </tr>
 <tr>
@@ -83,20 +83,19 @@
 </tr>
 <tr>
 <th>対応履歴</th>
-<td><textarea name="entry.839337160" cols="30" rows="10" class="wl" style="height: 200px;"></textarea></td>
+<td><textarea name="entry.839337160" cols="30" rows="10" class="wl" style="height: 150px;"></textarea></td>
 </tr>
 <tr>
 <th>メモ</th>
-<td><textarea name="entry.1523673400" cols="30" rows="10" class="wl" style="height: 200px;"></textarea></td>
+<td><textarea name="entry.1523673400" cols="30" rows="10" class="wl" style="height: 50px;"></textarea></td>
 </tr>
 <tr>
 <th>結果区分</th>
 <td>
 <div class="select1">
 <select name="entry.63116262">
- <option value="">　</option>
  <option value="完了">完了</option>
- <option value="継続"></option>
+ <option value="継続">継続</option>
  <option value="その他">その他</option>
 </select>
 </div>
