--- a/record1.html
+++ b/record1.html
@@ -99,6 +99,10 @@
 </div>
 </td>
 </tr>
+<tr>
+<th>対応者</th>
+<td><input type="text" name="entry.1684745662" size="30" class="ws"></td>
+</tr>
 </table>
 
 <p class="btn">
