--- a/record1.html
+++ b/record1.html
@@ -36,7 +36,7 @@
 
 <div class="h-adr">
 <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfW-YUbsQ-KmlhxRUh4fMPr0_6fkDhiewcZR_NlZI_zWVHe8w/formResponse"
-  method="post" id="order_form" class="form1">
+  method="post" target="hidden_iframe" onsubmit="submitted=true;" class="form1">
   
 <h2>対応記録</h2>
 
@@ -132,6 +132,9 @@
 
 <!--ページの上部へ戻るボタン-->
 <div class="pagetop"><a href="#"><i class="fas fa-angle-double-up"></i></a></div>
+
+<script type="text/javascript">var submitted = false;</script>
+<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted){window.location='（finish.html）';}"></iframe>
   
 </body>
 </html>
