--- a/record1.html
+++ b/record1.html
@@ -134,7 +134,8 @@
 <div class="pagetop"><a href="#"><i class="fas fa-angle-double-up"></i></a></div>
 
 <script type="text/javascript">var submitted = false;</script>
-<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted){window.location='（finish.html）';}"></iframe>
+<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" 
+  onload="if(submitted){window.location='（https://kizuna-ssi.github.io/inside_company/finish.html）';}"></iframe>
   
 </body>
 </html>
