--- a/record1.html
+++ b/record1.html
@@ -135,7 +135,7 @@
 
 <script type="text/javascript">var submitted = false;</script>
 <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" 
-  onload="if(submitted){window.location='（https://kizuna-ssi.github.io/inside_company/finish.html）';}"></iframe>
+  onload="if(submitted){window.location='https://kizuna-ssi.github.io/inside_company/finish.html';}"></iframe>
   
 </body>
 </html>
