--- a/record1.html
+++ b/record1.html
@@ -106,7 +106,7 @@
 </table>
 
 <p class="btn">
-  <input type="submit" value="送信する" data-callback="onSubmit" data-action="submit">
+  <input type="submit" value="送信する">
 </p>
 
 </form>
