--- a/record1.html
+++ b/record1.html
@@ -73,11 +73,11 @@
 </tr>
 <tr>
 <th>電話番号</th>
-<td><input type="tel" name="entry.1166974658" size="30" class="ws"></td>
+<td><input type="text" name="entry.1166974658" size="30" class="ws"></td>
 </tr>
 <tr>
 <th>メール<br class="br-sp">アドレス</th>
-<td><input type="email" name="entry.1045781291" size="30" class="ws"></td>
+<td><input type="text" name="entry.1045781291" size="30" class="ws"></td>
 </tr>
 <tr>
 <th>対応履歴</th>
