--- a/record1.html
+++ b/record1.html
@@ -36,11 +36,18 @@
 
 <div class="h-adr">
 <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfW-YUbsQ-KmlhxRUh4fMPr0_6fkDhiewcZR_NlZI_zWVHe8w/formResponse"
-  method="post" target="finish.html" class="form1">
+  method="post" class="form1">
   
 <h2>対応記録</h2>
 
 <table class="ta1">
+<tr>
+<th>対応日時</th>
+<td>
+  <input type="date" name="entry.1084012273" size="30" class="ws" style="display: inline-block;width: 150px;">
+  <input type="time" name="entry.1729057004" size="30" class="ws" style="display: inline-block;width: 150px;">
+</td>
+</tr>
 <tr>
 <th>区分</th>
 <td>
