--- a/record1.html
+++ b/record1.html
@@ -69,15 +69,15 @@
 </tr>
 <tr>
 <th>お名前</th>
-<td><input type="text" name="entry.11171077" size="30" class="ws"></td>
+<td><input type="text" name="entry.11171077" size="30" class="ws" autocomplete="off"></td>
 </tr>
 <tr>
 <th>電話番号</th>
-<td><input type="text" name="entry.1166974658" size="30" class="ws"></td>
+<td><input type="text" name="entry.1166974658" size="30" class="ws" autocomplete="off"></td>
 </tr>
 <tr>
 <th>メール<br class="br-sp">アドレス</th>
-<td><input type="text" name="entry.1045781291" size="30" class="ws"></td>
+<td><input type="text" name="entry.1045781291" size="30" class="ws" autocomplete="off"></td>
 </tr>
 <tr>
 <th>対応履歴</th>
