--- a/record1.html
+++ b/record1.html
@@ -35,8 +35,8 @@
 <section>
 
 <div class="h-adr">
-<form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfW-YUbsQ-KmlhxRUh4fMPr0_6fkDhiewcZR_NlZI_zWVHe8w/formResponse"
-  method="post" class="form1" target="hidden_iframe" onsubmit="submitted=true;">
+<form class="form1" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfW-YUbsQ-KmlhxRUh4fMPr0_6fkDhiewcZR_NlZI_zWVHe8w/formResponse"
+  method="post" target="hidden_iframe" onsubmit="submitted=true;">
   
 <h2>対応記録</h2>
 
