--- a/record1.html
+++ b/record1.html
@@ -133,7 +133,7 @@
 <!--ページの上部へ戻るボタン-->
 <div class="pagetop"><a href="#"><i class="fas fa-angle-double-up"></i></a></div>
 
-<script type="text/javascript">var submitted = false;</script>
+<script type="text/javascript">let submitted = false;</script>
 <iframe name="hidden_iframe" id="hidden_iframe" style="display: none" onload="if(submitted)  {window.location='finish.html';}"></iframe>
   
 </body>
