--- a/5e884898da28047151d0e56f8dc6292773603d0d6aabbdd62a11ef721d1542d8/contact.html
+++ b/5e884898da28047151d0e56f8dc6292773603d0d6aabbdd62a11ef721d1542d8/contact.html
@@ -7,7 +7,6 @@
 <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
 <meta name="description" content="">
 <link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/print.css">
 <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
@@ -30,25 +29,27 @@
 <div id="navigation"></div>
 </div>
  <!--/#menubar-->
- 
+  
 <main>
-
+  
 <section>
-<h2>このサイトについて</h2>
-<p>このサイトは「きずな少額短期保険」の社内向けのサイトです。<br>
-<br>
-推奨環境はPCのみとなります。スマートフォンやタブレットでのご利用は推奨していません。<br>
-また、JavaScript、Cookieが使用できる状態でご利用ください。<br>
-</p>
+<h2>ご連絡先</h2>
+  <p>
+    <span style="font-size: 130%; font-weight: bold;">株式会社きずな少額短期保険</span><br>
+    <span style="font-size: 100%; font-weight: bold;">【 本社 】</span><br>
+    <span style="font-size: 100%;">〒460-0003 愛知県名古屋市中区錦二丁目13番30号 9階</span><br>
+    <span style="font-size: 100%;">TEL：052-228-1335</span><br>
+    <span style="font-size: 80%;">受付時間：10:00〜16:00（土・日・祝・年末年始を除く）</span><br><br>
+    <span style="font-size: 100%; font-weight: bold;">【 東京事務所 】</span><br>
+    <span style="font-size: 100%;">〒102-0076 東京都千代田区五番町6番地2</span><br>
+    <span style="font-size: 100%;">TEL：03-6824-4768</span><span style="font-size: 80%;">（コールセンター）</span><br>
+    <span style="font-size: 100%;">TEL：0120-178-041</span><span style="font-size: 80%;">（保険金請求センター）</span><br>
+    <span style="font-size: 80%;">受付時間：10:00〜16:00（土・日・祝・年末年始を除く）</span>
+  </p>
 </section>
 
-<section>
-<h2>News</h2>
-<dl id="new">
-<dt>2024/04/22<span class="icon-bg1">サービス</span></dt><dd>サイト公開</dd>
-</dl>
-</section>  
 
+  
 </main>
 
 
