--- a/5e884898da28047151d0e56f8dc6292773603d0d6aabbdd62a11ef721d1542d8/finish.html
+++ b/5e884898da28047151d0e56f8dc6292773603d0d6aabbdd62a11ef721d1542d8/finish.html
@@ -29,30 +29,32 @@
 <div id="menubar">
 <div id="navigation"></div>
 </div>
- <!--/#menubar-->
- 
+<!--/#menubar-->
+  
 <main>
 
 <section>
-<h2>このサイトについて</h2>
-<p>このサイトは「きずな少額短期保険」の社内向けのサイトです。<br>
-<br>
-推奨環境はPCのみとなります。スマートフォンやタブレットでのご利用は推奨していません。<br>
-また、JavaScript、Cookieが使用できる状態でご利用ください。<br>
+
+<h2>送信完了</h2>
+
+<p>送信が完了しました。<br>
+</p><br>
+ 
+  <hr>
+
+<p>
+ <span style="font-size: 130%; font-weight: bold;">株式会社きずな少額短期保険</span><br>
+ <span style="font-size: 100%;">〒460-0003 愛知県名古屋市中区錦二丁目13番30号 9階</span><br>
+ <span style="font-size: 100%;">TEL：052-228-1335</span><br>
+ <span style="font-size: 80%;">受付時間：10:00〜16:00（土・日・祝・年末年始を除く）</span>
 </p>
+  
 </section>
-
-<section>
-<h2>News</h2>
-<dl id="new">
-<dt>2024/04/22<span class="icon-bg1">サービス</span></dt><dd>サイト公開</dd>
-</dl>
-</section>  
-
+  
 </main>
 
 
-  
+
 <footer>
 <small>Copyright 2024 KIZUNA Small Amount and Short Term Insurance Co., Ltd.</small>
 <span class="pr"><a href="https://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
@@ -69,6 +71,9 @@
 
 <!--ページの上部へ戻るボタン-->
 <div class="pagetop"><a href="#"><i class="fas fa-angle-double-up"></i></a></div>
+
+<script src="js/recruitcode.js"></script>
+<script src="https://yubinbango.github.io/yubinbango/yubinbango.js" charset="UTF-8"></script>
 
 </body>
 </html>
