--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
     <title>Password</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -12,8 +13,8 @@
   </head>
   <body>
     <form id="form">
-      <p id="message">Please enter your password.</p>
-      <input type="password" placeholder="password" id="password">
+      <p id="message">パスワードを入力してください</p>
+      <input type="password" id="password">
     </form>
     <script>
       function hash(text) {
@@ -32,13 +33,13 @@
           } else {
             const message = document.getElementById('message');
             const input = document.getElementById('password');
-            message.innerHTML = 'Wrong password! Try again.';
+            message.innerHTML = 'パスワードに誤りがあります';
             input.value = '';
           }
         };
         xhr.onerror = function () {
           const message = document.getElementById('message');
-          message.innerHTML = 'Sorry, ERROR !';
+          message.innerHTML = 'エラー！';
         };
       }
       const form = document.getElementById('form');
