--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record1.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record1.html
@@ -43,30 +43,34 @@
 
 <table class="ta1">
 <tr>
-<th>対応日時</th>
+<th>対応者</th>
+<td><input type="text" name="entry.1684745662" size="30" class="ws"></td>
+</tr>
+<tr>
+<th>顧客区分</th>
 <td>
-  <input type="date" name="entry.1084012273" size="30" class="ws" style="display: inline-block;width: 150px;">
-  <input type="time" name="entry.1729057004" size="30" class="ws" style="display: inline-block;width: 150px;">
+<div class="select1">
+ <span style="width:120px; text-align: center;">顧客区分</span>
+ <select name="entry.2005620554">
+  <option value="申込希望">申込希望</option>
+  <option value="既契約者">既契約者</option>
+  <option value="代理店">代理店</option>
+  <option value="その他">その他</option>
+ </select>
+</div>
 </td>
 </tr>
 <tr>
-<th>区分</th>
 <td>
 <div class="select1">
-<span style="width:100px; text-align: center;">顧客区分</span>
-    <select name="entry.2005620554">
-         <option value="申込希望">申込希望</option>
-         <option value="既契約者">既契約者</option>
-         <option value="代理店">代理店</option>
-         <option value="その他">その他</option>
-        </select>
-<span style="width:100px; text-align: center;">カテゴリ</span>
-        <select name="entry.1713702555">
-         <option value="相談">相談</option>
-         <option value="苦情">苦情</option>
-         <option value="その他">その他</option>
-        </select>         
-</div></td>
+ <span style="width:120px; text-align: center;">カテゴリ</span>
+ <select name="entry.1713702555">
+  <option value="相談">相談</option>
+  <option value="苦情">苦情</option>
+  <option value="その他">その他</option>
+ </select>         
+</div>
+</td>
 </tr>
 <tr>
 <th>お名前</th>
@@ -77,19 +81,11 @@
 <td><input type="text" name="entry.1166974658" size="30" class="ws" autocomplete="off"></td>
 </tr>
 <tr>
-<th>メール<br class="br-sp">アドレス</th>
-<td><input type="text" name="entry.1045781291" size="30" class="ws" autocomplete="off"></td>
-</tr>
-<tr>
 <th>対応履歴</th>
 <td><textarea name="entry.839337160" cols="30" rows="10" class="wl" style="height: 150px;"></textarea></td>
 </tr>
 <tr>
-<th>メモ</th>
-<td><textarea name="entry.1523673400" cols="30" rows="10" class="wl" style="height: 50px;"></textarea></td>
-</tr>
-<tr>
-<th>結果区分</th>
+<th>対応結果</th>
 <td>
 <div class="select1">
 <select name="entry.63116262">
@@ -99,10 +95,6 @@
 </select>
 </div>
 </td>
-</tr>
-<tr>
-<th>対応者</th>
-<td><input type="text" name="entry.1684745662" size="30" class="ws"></td>
 </tr>
 </table>
 
