--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record1.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record1.html
@@ -44,13 +44,20 @@
 <table class="ta1">
 <tr>
 <th>対応者</th>
-<td><input type="text" name="entry.1684745662" size="30" class="ws"></td>
+<td>
+<div class="select1">
+ <select name="entry.1684745662">
+  <option value="金海">金海</option>
+  <option value="清原">清原</option>
+  <option value="その他">その他</option>
+ </select>
+</div>
+</td>
 </tr>
 <tr>
 <th>顧客区分</th>
 <td>
 <div class="select1">
- <span style="width:120px; text-align: center;">顧客区分</span>
  <select name="entry.2005620554">
   <option value="申込希望">申込希望</option>
   <option value="既契約者">既契約者</option>
@@ -61,9 +68,9 @@
 </td>
 </tr>
 <tr>
+<th>カテゴリ</th>
 <td>
 <div class="select1">
- <span style="width:120px; text-align: center;">カテゴリ</span>
  <select name="entry.1713702555">
   <option value="相談">相談</option>
   <option value="苦情">苦情</option>
