--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record1.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record1.html
@@ -39,7 +39,7 @@
 <form class="form1" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfW-YUbsQ-KmlhxRUh4fMPr0_6fkDhiewcZR_NlZI_zWVHe8w/formResponse"
   method="POST" target="hidden_iframe" onsubmit="submitted=true;">
   
-<h2>対応記録</h2>
+<h2>受電記録</h2>
 
 <table class="ta1">
 <tr>
