--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record1.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record1.html
@@ -40,7 +40,7 @@
   method="POST" target="hidden_iframe" onsubmit="submitted=true;">
   
 <h2>受電記録</h2>
-
+<p><a href="https://docs.google.com/spreadsheets/d/1mCkFitSlhhmO7wj4U0DrTJJ1cJ3TM-PmFLy1kwoJmZI/edit?usp=sharing" target="_blank">記録の一覧を見る</p>
 <table class="ta1">
 <tr>
 <th>対応者</th>
