--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record1.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record1.html
@@ -81,7 +81,7 @@
 </td>
 </tr>
 <tr>
-<th>入電者名</th>
+<th>顧客名</th>
 <td><input type="text" name="entry.1311549919" size="30" class="ws" autocomplete="off"></td>
 </tr>
 <tr>
