--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
@@ -5,7 +5,7 @@
   <label for="ac-1">■ 日常業務</label>
   <div class="open">
     <a href="record1.html">受電記録</a>
-    <a href="record2.html">郵送記録</a>
+    <a href="record2.html">発送記録</a>
   </div>
 </div>
     
