--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -39,7 +39,7 @@
 <form class="form1" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLScpJ-dLO53eSWVRCjS6jhccvsFOSkd5s6j-jXhAcRFfRGXc4w/formResponse"
   method="POST" target="hidden_iframe" onsubmit="submitted=true;">
   
-<h2>受電記録</h2>
+<h2>発送記録</h2>
 <p style="text-align: right;">
 <a href="https://docs.google.com/spreadsheets/d/1mCkFitSlhhmO7wj4U0DrTJJ1cJ3TM-PmFLy1kwoJmZI/edit?usp=sharing" target="_blank">記録の一覧を見る</a></p>
 <table class="ta1">
