--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -7,6 +7,7 @@
 <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
 <meta name="description" content="">
 <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/print.css">
 <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
@@ -36,73 +37,44 @@
 
   
 <div class="h-adr">
-<form class="form1" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLScpJ-dLO53eSWVRCjS6jhccvsFOSkd5s6j-jXhAcRFfRGXc4w/formResponse"
+<form class="form1" action="#"
   method="POST" target="hidden_iframe" onsubmit="submitted=true;">
   
 <h2>発送記録</h2>
 <p style="text-align: right;">
-<a href="https://docs.google.com/spreadsheets/d/1mCkFitSlhhmO7wj4U0DrTJJ1cJ3TM-PmFLy1kwoJmZI/edit?usp=sharing" target="_blank">記録の一覧を見る</a></p>
+<a href="#">記録の一覧を見る</a></p>
 <table class="ta1">
 <tr>
-<th>対応者</th>
-<td>
-<div class="select2">
- <select name="entry.60920098">
-  <option value="金海">金海</option>
-  <option value="清原">清原</option>
-  <option value="その他">その他</option>
- </select>
-</div>
-</td>
+<th>発送日</th>
+<td>　</td>
 </tr>
 <tr>
-<th>顧客区分</th>
-<td>
-<div class="select2">
- <select name="entry.1527708671">
-  <option value="申込希望">申込希望</option>
-  <option value="既契約者">既契約者</option>
-  <option value="代理店">代理店</option>
-  <option value="その他">その他</option>
- </select>
-</div>
-</td>
+<th>氏名</th>
+<td>　</td>
 </tr>
 <tr>
-<th>カテゴリ</th>
-<td>
-<div class="select2">
- <select name="entry.908868485">
-  <option value="相談">相談</option>
-  <option value="苦情">苦情</option>
-  <option value="その他">その他</option>
- </select>         
-</div>
-</td>
+<th>郵便番号</th>
+<td>　</td>
 </tr>
 <tr>
-<th>顧客名</th>
+<th>住所</th>
 <td><input type="text" name="entry.1311549919" size="30" class="ws" autocomplete="off"></td>
 </tr>
 <tr>
-<th>電話番号</th>
+<th>建物名</th>
 <td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off"></td>
 </tr>
 <tr>
-<th>対応履歴</th>
-<td><textarea name="entry.2035260779" cols="30" rows="10" class="wl" style="height: 150px;"></textarea></td>
+<th>発送物1</th>
+<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off"></td>
 </tr>
 <tr>
-<th>対応結果</th>
-<td>
-<div class="select2">
-<select name="entry.976478887">
- <option value="完了">完了</option>
- <option value="継続">継続</option>
- <option value="その他">その他</option>
-</select>
-</div>
-</td>
+<th>発送物2</th>
+<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off"></td>
+</tr>
+<tr>
+<th>発送物3</th>
+<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off"></td>
 </tr>
 </table>
 
