--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -65,15 +65,15 @@
 <td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off"></td>
 </tr>
 <tr>
-<th>発送物1</th>
+<th>送付物その1</th>
 <td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off"></td>
 </tr>
 <tr>
-<th>発送物2</th>
+<th>送付物その2</th>
 <td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off"></td>
 </tr>
 <tr>
-<th>発送物3</th>
+<th>送付物その3</th>
 <td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off"></td>
 </tr>
 </table>
