--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -46,7 +46,7 @@
 <table class="ta1">
 <tr>
 <th>発送日</th>
-<td>　</td>
+<td><input type="date" id="date-picker" name="entry.941628759" value=""></td>
 </tr>
 <tr>
 <th>氏名</th>
