--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -39,6 +39,7 @@
 <div class="h-adr">
 <form class="form1" action="#"
   method="POST" target="hidden_iframe" onsubmit="submitted=true;">
+<span class="p-country-name" style="display:none;">Japan</span>
   
 <h2>発送記録</h2>
 <p style="text-align: right;">
@@ -46,19 +47,19 @@
 <table class="ta1">
 <tr>
 <th>発送日</th>
-<td><input type="date" id="date-picker" name="entry.941628759" value=""></td>
+<td><input type="date" id="date-picker" name="entry" class="ws" style="width: 120px;"></td>
 </tr>
 <tr>
 <th>氏名</th>
-<td>　</td>
+<td><input type="text" name="entry" size="30" class="ws" autocomplete="off"></td>
 </tr>
 <tr>
 <th>郵便番号</th>
-<td>　</td>
+<td><input id="contractor_postal_code" type="text" class="p-postal-code ws" size="8" maxlength="8" style="width: 100%;"></td>
 </tr>
 <tr>
 <th>住所</th>
-<td><input type="text" name="entry.1311549919" size="30" class="ws" autocomplete="off"></td>
+<td><input id="contractor_address" type="text" class="p-region p-locality p-street-address p-extended-address ws" style="width: 100%;"></td>
 </tr>
 <tr>
 <th>建物名</th>
@@ -106,16 +107,10 @@
 <!--ページの上部へ戻るボタン-->
 <div class="pagetop"><a href="#"><i class="fas fa-angle-double-up"></i></a></div>
 
-	<script type="text/javascript">
-		let submitted = false;
-	</script>
+<script type="text/javascript"> let submitted = false;</script>
+<iframe name="hidden_iframe" id="hidden_iframe" style="display: none" onload="if(submitted){window.location='finish.html';}"\></iframe>
 
-	<iframe
-		name="hidden_iframe"
-		id="hidden_iframe"
-		style="display: none"
-		onload="if(submitted){window.location='finish.html';}"
-	></iframe>
-  
+<script src="https://yubinbango.github.io/yubinbango/yubinbango.js" charset="UTF-8"></script>
+
 </body>
 </html>
