--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -47,35 +47,80 @@
 <table class="ta1">
 <tr>
 <th>発送日</th>
-<td><input type="date" id="date-picker" name="entry" class="ws" style="width: 120px;"></td>
+<td colspan="2"><input type="date" id="date-picker" name="entry" class="ws" style="width: 120px;"></td>
 </tr>
 <tr>
 <th>氏名</th>
-<td><input type="text" name="entry" size="30" class="ws" autocomplete="off"></td>
+<td colspan="2"><input type="text" name="entry" size="30" class="ws" autocomplete="off"></td>
 </tr>
 <tr>
 <th>郵便番号</th>
-<td><input id="contractor_postal_code" type="text" class="p-postal-code ws" size="8" maxlength="8" style="width: 120px;"></td>
+<td colspan="2"><input id="contractor_postal_code" type="text" class="p-postal-code ws" size="8" maxlength="8" style="width: 120px;"></td>
 </tr>
 <tr>
 <th>住所</th>
-<td><input id="contractor_address" type="text" class="p-region p-locality p-street-address p-extended-address ws" style="width: 100%;"></td>
+<td colspan="2"><input id="contractor_address" type="text" class="p-region p-locality p-street-address p-extended-address ws" style="width: 100%;"></td>
 </tr>
 <tr>
 <th>建物名</th>
-<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off"></td>
+<td colspan="2"><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off"></td>
 </tr>
 <tr>
 <th>送付物その1</th>
 <td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off"></td>
+<td>  <div class="select1">
+    <select style="width: 100px;" name="パンフレット_部数">
+     <option value="-">0部</option>
+     <option value="1部">1部</option>
+     <option value="2部">2部</option>
+     <option value="3部">3部</option>
+     <option value="4部">4部</option>
+     <option value="5部">5部</option>
+     <option value="6部">6部</option>
+     <option value="7部">7部</option>
+     <option value="8部">8部</option>
+     <option value="9部">9部</option>
+     <option value="10部">10部</option>
+   </select>
+  </div></td>
 </tr>
 <tr>
 <th>送付物その2</th>
 <td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off"></td>
+<td>  <div class="select1">
+    <select style="width: 100px;" name="パンフレット_部数">
+     <option value="-">0部</option>
+     <option value="1部">1部</option>
+     <option value="2部">2部</option>
+     <option value="3部">3部</option>
+     <option value="4部">4部</option>
+     <option value="5部">5部</option>
+     <option value="6部">6部</option>
+     <option value="7部">7部</option>
+     <option value="8部">8部</option>
+     <option value="9部">9部</option>
+     <option value="10部">10部</option>
+   </select>
+  </div></td>
 </tr>
 <tr>
 <th>送付物その3</th>
 <td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off"></td>
+<td>  <div class="select1">
+    <select style="width: 100px;" name="パンフレット_部数">
+     <option value="-">0部</option>
+     <option value="1部">1部</option>
+     <option value="2部">2部</option>
+     <option value="3部">3部</option>
+     <option value="4部">4部</option>
+     <option value="5部">5部</option>
+     <option value="6部">6部</option>
+     <option value="7部">7部</option>
+     <option value="8部">8部</option>
+     <option value="9部">9部</option>
+     <option value="10部">10部</option>
+   </select>
+  </div></td>
 </tr>
 </table>
 
