--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -59,7 +59,7 @@
 </tr>
 <tr>
 <th>住所</th>
-<td colspan="2"><input id="contractor_address" type="text" class="p-region p-locality p-street-address p-extended-address ws" style="width: 100%;"></td>
+<td colspan="2"><input id="contractor_address" type="text" class="p-region p-locality p-street-address p-extended-address ws" style="width: 90%;"></td>
 </tr>
 <tr>
 <th>建物名</th>
@@ -67,26 +67,12 @@
 </tr>
 <tr>
 <th>送付物その1</th>
-<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off"></td>
-<td>  <div class="select1">
-    <select style="width: 100px;" name="パンフレット_部数">
-     <option value="-">0部</option>
-     <option value="1部">1部</option>
-     <option value="2部">2部</option>
-     <option value="3部">3部</option>
-     <option value="4部">4部</option>
-     <option value="5部">5部</option>
-     <option value="6部">6部</option>
-     <option value="7部">7部</option>
-     <option value="8部">8部</option>
-     <option value="9部">9部</option>
-     <option value="10部">10部</option>
-   </select>
-  </div></td>
+<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100px;">部</td>
 </tr>
 <tr>
 <th>送付物その2</th>
-<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off"></td>
+<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
 <td>  <div class="select1">
     <select style="width: 100px;" name="パンフレット_部数">
      <option value="-">0部</option>
@@ -105,7 +91,7 @@
 </tr>
 <tr>
 <th>送付物その3</th>
-<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off"></td>
+<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
 <td>  <div class="select1">
     <select style="width: 100px;" name="パンフレット_部数">
      <option value="-">0部</option>
