--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -66,17 +66,27 @@
 <td colspan="2"><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off"></td>
 </tr>
 <tr>
-<th>送付物その1</th>
+<th>送付物.1</th>
 <td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
 <td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
 </tr>
 <tr>
-<th>送付物その2</th>
+<th>送付物.2</th>
 <td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
 <td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
 </tr>
 <tr>
-<th>送付物その3</th>
+<th>送付物.3</th>
+<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
+</tr>
+<tr>
+<th>送付物.4</th>
+<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
+</tr>
+<tr>
+<th>送付物.5</th>
 <td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
 <td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
 </tr>
