--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -52,7 +52,8 @@
 <tr>
 <th>氏名</th>
 <td><input type="text" name="entry" size="30" class="ws" autocomplete="off"></td>
-<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;"  placeholder="敬称"></td>
+<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" 
+      style="width: 50px; margin: 0px 15px 0px 30px;"  placeholder="敬称"></td>
 </tr>
 <tr>
 <th>郵便番号</th>
