--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -47,49 +47,49 @@
 <table class="ta1">
 <tr>
 <th>発送日</th>
-<td colspan="2"><input type="date" id="date-picker" name="entry" class="ws" style="width: 120px;"></td>
+<td colspan="3"><input type="date" id="date-picker" name="entry" class="ws" style="width: 120px;"></td>
 </tr>
 <tr>
 <th>氏名</th>
-<td><input type="text" name="entry" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td colspan="2"><input type="text" name="entry" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
 <td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" 
       style="width: 50px; margin: 0px 15px 0px 30px;"  placeholder="敬称"></td>
 </tr>
 <tr>
 <th>郵便番号</th>
-<td colspan="2"><input id="contractor_postal_code" type="text" class="p-postal-code ws" size="8" maxlength="8" style="width: 120px;"></td>
+<td colspan="3"><input id="contractor_postal_code" type="text" class="p-postal-code ws" size="8" maxlength="8" style="width: 120px;"></td>
 </tr>
 <tr>
 <th>住所</th>
-<td colspan="2"><input id="contractor_address" type="text" class="p-region p-locality p-street-address p-extended-address ws" style="width: 90%;"></td>
+<td colspan="3"><input id="contractor_address" type="text" class="p-region p-locality p-street-address p-extended-address ws" style="width: 90%;"></td>
 </tr>
 <tr>
 <th>建物名</th>
-<td colspan="2"><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off"></td>
+<td colspan="3"><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off"></td>
 </tr>
 <tr>
 <th>送付物.1</th>
-<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td colspan="2"><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
 <td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
 </tr>
 <tr>
 <th>送付物.2</th>
-<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td colspan="2"><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
 <td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
 </tr>
 <tr>
 <th>送付物.3</th>
-<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td colspan="2"><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
 <td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
 </tr>
 <tr>
 <th>送付物.4</th>
-<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td colspan="2"><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
 <td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
 </tr>
 <tr>
 <th>送付物.5</th>
-<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td colspan="2"><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
 <td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
 </tr>
 </table>
