--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record1.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record1.html
@@ -60,7 +60,7 @@
 <td>
 <div class="select2">
  <select name="entry.1527708671">
-  <option value="申込希望">申込希望</option>
+  <option value="未契約者">未契約者</option>
   <option value="既契約者">既契約者</option>
   <option value="代理店">代理店</option>
   <option value="その他">その他</option>
