--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -37,7 +37,7 @@
 
   
 <div class="h-adr">
-<form class="form1" action="#"
+<form class="form1" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeMUerMYaxNylM8gg8WUdvuf93Y_1AvxufBF4UQ9zb2TdWYZg/formResponse"
   method="POST" target="hidden_iframe" onsubmit="submitted=true;">
 <span class="p-country-name" style="display:none;">Japan</span>
   
@@ -47,50 +47,52 @@
 <table class="ta1">
 <tr>
 <th>発送日</th>
-<td colspan="3"><input type="date" id="date-picker" name="entry" class="ws" style="width: 120px;"></td>
+<td colspan="3"><input type="date" id="date-picker" name="entry.487303294" class="ws" style="width: 120px;"></td>
 </tr>
 <tr>
 <th>氏名</th>
-<td colspan="2"><input type="text" name="entry" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
-<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" 
+<td colspan="2"><input type="text" name="entry.147184437" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td><input type="text" name="entry.48928667" size="30" class="ws" autocomplete="off" 
       style="width: 50px; margin: 0px 15px 0px 30px;"  placeholder="敬称"></td>
 </tr>
 <tr>
 <th>郵便番号</th>
-<td colspan="3"><input id="contractor_postal_code" type="text" class="p-postal-code ws" size="8" maxlength="8" style="width: 120px;"></td>
+<td colspan="3">
+  <input id="contractor_postal_code" type="text" class="p-postal-code ws" size="8" maxlength="8" style="width: 120px;" name="entry.725401947"></td>
 </tr>
 <tr>
 <th>住所</th>
-<td colspan="3"><input id="contractor_address" type="text" class="p-region p-locality p-street-address p-extended-address ws" style="width: 90%;"></td>
+<td colspan="3">
+  <input id="contractor_address" type="text" class="p-region p-locality p-street-address p-extended-address ws" style="width: 90%;" name="entry.1131165225"></td>
 </tr>
 <tr>
 <th>建物名</th>
-<td colspan="3"><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off"></td>
+<td colspan="3"><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" name="entry.1793772112"></td>
 </tr>
 <tr>
 <th>送付物.1</th>
-<td colspan="2"><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
-<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
+<td colspan="2"><input type="text" name="entry.571521907" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td><input type="text" name="entry.230824405" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
 </tr>
 <tr>
 <th>送付物.2</th>
-<td colspan="2"><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
-<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
+<td colspan="2"><input type="text" name="entry.1136923254" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td><input type="text" name="entry.1182823623" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
 </tr>
 <tr>
 <th>送付物.3</th>
-<td colspan="2"><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
-<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
+<td colspan="2"><input type="text" name="entry.1514396093" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td><input type="text" name="entry.1746422599" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
 </tr>
 <tr>
 <th>送付物.4</th>
-<td colspan="2"><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
-<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
+<td colspan="2"><input type="text" name=entry.254609885" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td><input type="text" name="entry.1446297283" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
 </tr>
 <tr>
 <th>送付物.5</th>
-<td colspan="2"><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
-<td><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
+<td colspan="2"><input type="text" name="entry.1134353344 size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td><input type="text" name="entry.234563841" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
 </tr>
 </table>
 
