--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -43,7 +43,7 @@
   
 <h2>発送記録</h2>
 <p style="text-align: right;">
-<a href="#">記録の一覧を見る</a></p>
+<a href="https://docs.google.com/spreadsheets/d/1DAcsWGqT1SRIN8h-YVf1sDqVyMefVi67JbxD1HYB_xY/edit?usp=sharing">記録の一覧を見る</a></p>
 <table class="ta1">
 <tr>
 <th>発送日</th>
