--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -86,12 +86,12 @@
 </tr>
 <tr>
 <th>送付物.4</th>
-<td colspan="2"><input type="text" name=entry.254609885" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td colspan="2"><input type="text" name="entry.254609885" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
 <td><input type="text" name="entry.1446297283" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
 </tr>
 <tr>
 <th>送付物.5</th>
-<td colspan="2"><input type="text" name="entry.1134353344 size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td colspan="2"><input type="text" name="entry.1134353344" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
 <td><input type="text" name="entry.234563841" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
 </tr>
 </table>
