--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -67,7 +67,7 @@
 </tr>
 <tr>
 <th>建物名</th>
-<td colspan="3"><input type="text" name="entry.223874258" size="30" class="ws" autocomplete="off" name="entry.1793772112"></td>
+<td colspan="3"><input type="text" size="30" class="ws" autocomplete="off" name="entry.1793772112"></td>
 </tr>
 <tr>
 <th>送付物.1</th>
@@ -128,6 +128,5 @@
 <iframe name="hidden_iframe" id="hidden_iframe" style="display: none" onload="if(submitted){window.location='finish.html';}"\></iframe>
 
 <script src="https://yubinbango.github.io/yubinbango/yubinbango.js" charset="UTF-8"></script>
-
 </body>
 </html>
