--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -58,7 +58,7 @@
 <tr>
 <th>郵便番号</th>
 <td colspan="3">
-  <input type="text" id="contractor_postal_code" type="text" class="p-postal-code ws" size="8" maxlength="8" style="width: 120px;" name="entry.725401947"></td>
+  <input type="text" id="contractor_postal_code" class="p-postal-code ws" size="8" maxlength="8" style="width: 120px;" name="entry.725401947"></td>
 </tr>
 <tr>
 <th>住所</th>
