--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -14,7 +14,8 @@
 <body>
 
 <div id="container">
-
+<div class="no-print">
+  
 <header>
 
 <h1 id="logo"><a href="index.html"><img src="images/logo.png" alt=""></a></h1>
@@ -112,6 +113,8 @@
 <span class="pr"><a href="https://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
 </footer>
 
+
+</div>
 </div>
 <!--/#container-->
 
