--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/application_print.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/application_print.html
@@ -43,7 +43,7 @@
       最初に募集人コード（半角数字6桁）を入力してください。<br>
       正しい募集人コードが入力された場合のみ、入力フォームが表示されます。<br>
       <span style="font-size: 0.8em;">
-        ※本ページでの入力はあくまで印刷を目的としたものであるため、入力されたデータはお使いのブラウザ以外に保存されることはありません。</span></p><br>
+        ※本ページでの入力はあくまで印刷を目的としたものであるため、入力されたデータはブラウザ以外に保存されることはありません。</span></p><br>
 
     <table class="ta1">
       <caption>代理店・募集人<span style="font-size: 0.7em;">（窓口となる会社・担当）</span></caption>
