--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -31,11 +31,13 @@
 <div id="navigation"></div>
 </div>
 <!--/#menubar-->
+</div>
 
+  
 <main>
 
+<div class="no-print">
 <section>
-
   
 <div class="h-adr">
 <form class="form1" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeMUerMYaxNylM8gg8WUdvuf93Y_1AvxufBF4UQ9zb2TdWYZg/formResponse"
@@ -103,11 +105,15 @@
 
 </form>
 </div>
-  
 </section>
-  
-</main>
 </div>
+
+  
+<section>
+
+</section> 
+
+</main>
 
 <div class="no-print">
 <footer>
@@ -115,7 +121,6 @@
 <span class="pr"><a href="https://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
 </footer>
 </div>
-
 
 </div>
 <!--/#container-->
